fix width issue when wrapped in display flex container

--- a/test/react-test-app/src/App.css
+++ b/test/react-test-app/src/App.css
@@ -53,7 +53,6 @@ h1 {
 
 .page {
     flex: 3 0 auto;
-    width: 100vw;
 }
 
 /* Navbar */
